--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://www.stevenoxley.com
-title: Steven Oxley
-subtitle: Programmer Extraordinaire.
+title: Bytes and Bikes
+subtitle: Plus other interesting stuff.  But mostly computer software and mountain biking.
 author: Steven Oxley
 simple_search: http://google.com/search
 
