--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: xonev
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -75,7 +75,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: bytesandbikes
 disqus_show_comment_count: false
 
 # Google Analytics
