--- a/hugo/hugo.yaml
+++ b/hugo/hugo.yaml
@@ -3,6 +3,30 @@ languageCode: 'en-us'
 title: 'Bytes and Bikes'
 theme: 'brutal'
 
+menus:
+  main:
+    - name: Home
+      pageRef: /
+      weight: 10
+    - name: Archives
+      pageRef: /blog
+      weight: 20
+    - name: Categories
+      pageRef: /categories
+      weight: 30
+    - name: About
+      pageRef: /about
+      weight: 40
+
 permalinks:
   page:
     blog: /blog/:year/:month/:day/:slug
+
+params:
+  author:
+    email: steven.aj.oxley@gmail.com
+    name: Steve Oxley
+
+module:
+  imports:
+    - path: codeberg.org/yelosan/hugo-feeds
