--- a/hugo/themes/brutal/theme.toml
+++ b/hugo/themes/brutal/theme.toml
@@ -1,13 +1,13 @@
-name = 'Theme name'
+name = 'Brutal'
 license = 'MIT'
-licenselink = 'https://github.com/owner/repo/LICENSE'
-description = 'Theme description'
+licenselink = ''
+description = 'Dead simple blog theme'
 
 # The home page of the theme, where the source can be found
-homepage = 'https://github.com/owner/repo'
+homepage = ''
 
 # If you have a running demo of the theme
-demosite = 'https://owner.github.io/repo'
+demosite = ''
 
 # Taxonomy terms
 tags = ['blog', 'company']
@@ -15,8 +15,7 @@ features = ['some', 'awesome', 'features']
 
 # If the theme has multiple authors
 authors = [
-  {name = 'Name of author', homepage = 'Website of author'},
-  {name = 'Name of author', homepage = 'Website of author'}
+  {name = 'Steven Oxley', homepage = 'http://stevenoxley.com/'}
 ]
 
 # If the theme has a single author
