--- a/hugo/hugo.yaml
+++ b/hugo/hugo.yaml
@@ -42,3 +42,8 @@ outputs:
     - HTML
     - ATOM
     - RSS
+
+deployment:
+  targets:
+    - name: "s3-prod"
+      URL: s3://stevenoxley-com-site?region=us-west-2
