Add principle of production purpose blog post and code review survey results.

--- a/hugo/hugo.yaml
+++ b/hugo/hugo.yaml
@@ -48,3 +48,8 @@ deployment:
     - name: s3-prod
       URL: s3://stevenoxley-com-site?region=us-west-2
       cloudFrontDistributionID: E3CPVBXOIRWO5M
+
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
