--- a/hugo/hugo.yaml
+++ b/hugo/hugo.yaml
@@ -29,11 +29,21 @@ params:
     email: steven.aj.oxley@gmail.com
     name: Steve Oxley
 
+outputFormats:
+  email:
+    baseName: index.email
+    isHTML: true
+    isPlainText: false
+    mediaType: text/html
+
 outputs:
   home:
     - HTML
     - ATOM
     - RSS
+  page:
+    - HTML
+    - EMAIL
   section:
     - HTML
     - ATOM
